--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,6 @@
-<form (submit)="onSubmit($event)">
-  <input (input)="term = $event.target.value" />
-</form>
+<div class="box">
+  <form (submit)="onSubmit($event)">
+    <input (input)="term = $event.target.value" class="input" placeholder="Enter search term"/>
+  </form>
+
+</div>
